@@ -20,6 +20,7 @@ Ondra 'Kepi' Kudlík <kepi@igloonet.cz>
 * CSFD movie plugin
 
 Michael Jahn <mikej06@hotmail.com>
+* Programmer
 * Movie plugins: DVDEmpire, DVD-Palace, FilmDb, FilmeVonAZ, IMDb-de, Kino.de, Zelluloid
 
 Jessica Katharina Parth <Jessica.K.P@women-at-work.org>
@@ -28,3 +29,6 @@ Jessica Katharina Parth <Jessica.K.P@women-at-work.org>
 
 dragonskulle <dragonskulle@gmail.com>:
 * seen / unseen icons
+
+Ivo Nunes <netherblood@gmail.com>
+* Programmer
