@@ -1342,41 +1342,11 @@ You can't undo this operation."""), self.widgets['window']):
 	    if gutils.questionmac(_('Are you sure you want to create a new database?\nYou will lose ALL your current data!'), self.widgets['window']):
 	        log.debug('NEW DATABASE')
 	        if gutils.questionmac(_('Last chance!\nDo you confirm that you want\nto lose your current data?'), self.widgets['window']):
-	            from sqlalchemy import select
-		    from sql import GriffithSQL
-		    from delete import delete_poster_from_cache
-		    # delete images
-		    posters_dir = self.locations['posters']
-		    # NOTE: only used images are removed (posters are shared between various db)
-		    log.debug('removing old images...')
-
-		    posters = self.db.session.query(db.Movie.poster_md5).all()
-		    for poster in posters:
-			delete_poster_from_cache(poster[0], posters_dir)
-
-		    log.debug('dropping old tables...')
-		    self.db.session.rollback() # cancel all pending operations
-		    db.metadata.drop_all(self.db.session.bind.engine)
-		    #from sqlalchemy.orm import clear_mappers
-		    #clear_mappers()
-		    # disposing current db connection
-		    self.db.dispose()
-		    # dispose isn't enough here, I don't know why, but unlink fails
-		    # but I think unlink should not be necessary because all tables are dropped
-		    #if self.config.get('type', 'sqlite', section='database') == 'sqlite':
-		    #    os.unlink(os.path.join(self.locations['home'],self.config.get('name', 'griffith', section='database') + '.db'))
-		    #    if self.config.get('file', 'griffith.db', section='database') == 'griffith.gri':
-		    #        self.config.set('file', 'griffith.db', section='database')
-		    #	 create/connect db
-		    log.debug('creating new ones...')
-		    self.db = GriffithSQL(self.config, self.griffith_dir)
-		    self.clear_details()
-		    self.total = 0
-		    self.count_statusbar()
-		    self.treemodel.clear()
-		    from initialize import dictionaries, people_treeview
-		    dictionaries(self)
-		    people_treeview(self)
+		    from os import system
+		    system("rm -R ~/.griffith")
+		    log.debug("Deleting database")
+		    python = sys.executable
+		    os.execl(python, python, * sys.argv)
 	    
 	else:	
 	    if gutils.question(_('Are you sure you want to create a new database?\nYou will lose ALL your current data!'), self.widgets['window']):
