@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2011  Vasco Nunes, Piotr Ożarowski
 
+2011-02-06  Ivo Nunes
+	* Fixed creating a new database and restoring backups under Mac OS X
+
 2011-02-05  Vasco Nunes
 	* [#703576] no automatic refresh after get back a dvd
 	* Sync mac menubar when menu checkMenuItems are changed
